# SpeechEmotionRecogniser

./: .gitignore  CMakeLists.txt  README.md  SpeechEmotionRecogniser.cpp  SpeechEmotionRecogniser.sln  SpeechEmotionRecogniser.vcxproj  SpeechEmotionRecogniser.vcxproj.filters
include/Audio/: AudioLoader.h
include/Domain/: EmotionLabels.h
include/Inference/: EmotionRecognizer.h
models/: README.md  model_fp16.onnx  model_int8.onnx
src/: main.cpp
src/Audio/: AudioLoader.cpp
src/Inference/: EmotionRecognizer.cpp
